@@ -287,6 +287,8 @@ local function GWUseThisLocalization()
     L["RAID_SHOW_IMPORTEND_RAID_DEBUFFS"] = "Dungeon & Raid Debuffs"
     L["RAID_SHOW_IMPORTEND_RAID_DEBUFFS_DESC"] = "Show importend Dungeon & Raid debuffs"
     L["ALERTFRAMES"] = "警報"
+    L["PLAYER_GROUP_FRAME"] = "Playerframe in group"
+    L["PLAYER_GROUP_FRAME_DESC"] = "Show Player as Groupframe"
 
     --Composite
     L["TOPLEFT"] = ("%s %s"):format(L["TOP"], L["LEFT"])
