@@ -305,6 +305,7 @@ GW_DEFAULT["PARTY_UNIT_HEALTH"] = "NONE"
 GW_DEFAULT["PARTY_SHOW_DEBUFFS"] = true
 GW_DEFAULT["PARTY_ONLY_DISPELL_DEBUFFS"] = false
 GW_DEFAULT["PARTY_SHOW_IMPORTEND_RAID_INSTANCE_DEBUFF"] = false
+GW_DEFAULT["PARTY_PLAYER_FRAME"] = false
 GW_DEFAULT["FADE_GROUP_MANAGE_FRAME"] = false
 
 GW_DEFAULT["AUTO_REPAIR"] = "NONE"
