@@ -915,8 +915,14 @@ end
 GW.TogglePartyRaid = TogglePartyRaid
 
 local function createPartyFrame(i)
-    local registerUnit = "party" .. i
+    local registerUnit
+    if i > 0 then 
+        registerUnit = "party" .. i
+    else
+        registerUnit = "player"
+    end
     local frame = CreateFrame("Button", "GwPartyFrame" .. i, UIParent, "GwPartyFrame")
+    local multiplier = GetSetting("PARTY_PLAYER_FRAME") and 1 or 0
 
     frame.name:SetFont(UNIT_NAME_FONT, 12)
     frame.name:SetShadowOffset(-1, -1)
@@ -927,7 +933,7 @@ local function createPartyFrame(i)
 
     frame:SetScript("OnEvent", party_OnEvent)
 
-    frame:SetPoint("TOPLEFT", 20, -104 + (-85 * i) + 85)
+    frame:SetPoint("TOPLEFT", 20, -104 + (-85 * (i + multiplier)) + 85)
 
     frame.unit = registerUnit
     frame.guid = UnitGUID(frame.unit)
@@ -938,7 +944,15 @@ local function createPartyFrame(i)
     frame:SetAttribute("*type1", "target")
     frame:SetAttribute("*type2", "togglemenu")
 
-    RegisterUnitWatch(frame)
+    if i > 0 then
+        RegisterUnitWatch(frame)
+    else
+        RegisterStateDriver(
+        frame,
+        "visibility",
+        "[nogroup] hide;show"
+    )
+    end
     frame:EnableMouse(true)
     frame:RegisterForClicks("AnyUp")
 
@@ -996,15 +1010,8 @@ local function hideBlizzardPartyFrame()
 
     for i = 1, MAX_PARTY_MEMBERS do
         if _G["PartyMemberFrame" .. i] then
-            _G["PartyMemberFrame" .. i]:UnregisterAllEvents()
-            _G["PartyMemberFrame" .. i]:Hide()
-            _G["PartyMemberFrame" .. i].Show = GW.NoOp
+            _G["PartyMemberFrame" .. i]:Kill()
         end
-
-        _G["PartyMemberFrame" .. i]:HookScript("OnShow", function()
-            _G["PartyMemberFrame" .. i]:SetAlpha(0)
-            _G["PartyMemberFrame" .. i]:EnableMouse(false)
-        end)
     end
 
     if CompactRaidFrameManager then
@@ -1023,6 +1030,10 @@ local function LoadPartyFrames()
 
     if GetSetting("RAID_FRAMES") and GetSetting("RAID_STYLE_PARTY") then
         return
+    end
+
+    if GetSetting("PARTY_PLAYER_FRAME") then
+        createPartyFrame(0)
     end
 
     for i = 1, MAX_PARTY_MEMBERS do
