@@ -38,6 +38,7 @@ NEW
     - Added extra mana bar for feral druids in cat form
     - Added 'Show Debuff', 'Show only dispellable debuffs', 'Show importend raid & instance debuffs' to party and raidframes
     - Split Raid and Group frames to two different options
+    - Added option "Show Player in Groupframes"
     - Update locals (zhTW, ptBR)
 
 FIXES
